--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
-# Environment variables for Todo API
+# Environment variables for Todo API - Example File
 
 # Secret key for JWT token generation
 # Generate a secure key for production use
+# openssl rand -hex 32
 SECRET_KEY=your-secret-key-change-this-in-production
 
-# Database URL (if using a different database)
-DATABASE_URL=sqlite:///./todos.db
+# Database URL (SQLite in data directory)
+DATABASE_URL=sqlite:///./data/todos.db
+
+# Token expiration time (in minutes)
+ACCESS_TOKEN_EXPIRE_MINUTES=30
